out
In file included from /usr/include/c++/11/debug/debug.h:133,
                 from /usr/include/c++/11/bits/stl_algobase.h:69,
                 from /usr/include/c++/11/bits/specfun.h:45,
                 from /usr/include/c++/11/cmath:1935,
                 from stdc++.h:41:
/usr/include/c++/11/debug/functions.h: In instantiation of ‘constexpr bool __gnu_debug::__check_partitioned_lower(_ForwardIterator, _ForwardIterator, const _Tp&) [with _ForwardIterator = int; _Tp = main()::<lambda(double)>]’:
/usr/include/c++/11/bits/stl_algo.h:2249:7:   required from ‘constexpr bool std::binary_search(_FIter, _FIter, const _Tp&) [with _FIter = int; _Tp = main()::<lambda(double)>]’
test.cpp:170:31:   required from here
/usr/include/c++/11/debug/functions.h:354:35: error: invalid type argument of unary ‘*’ (have ‘int’)
  354 |       while (__first != __last && *__first < __value)
      |                                   ^~~~~~~~
/usr/include/c++/11/debug/functions.h:359:41: error: invalid type argument of unary ‘*’ (have ‘int’)
  359 |           while (__first != __last && !(*__first < __value))
      |                                         ^~~~~~~~
/usr/include/c++/11/debug/functions.h: In instantiation of ‘constexpr bool __gnu_debug::__check_partitioned_upper(_ForwardIterator, _ForwardIterator, const _Tp&) [with _ForwardIterator = int; _Tp = main()::<lambda(double)>]’:
/usr/include/c++/11/bits/stl_algo.h:2250:7:   required from ‘constexpr bool std::binary_search(_FIter, _FIter, const _Tp&) [with _FIter = int; _Tp = main()::<lambda(double)>]’
test.cpp:170:31:   required from here
/usr/include/c++/11/debug/functions.h:371:47: error: invalid type argument of unary ‘*’ (have ‘int’)
  371 |       while (__first != __last && !(__value < *__first))
      |                                               ^~~~~~~~
/usr/include/c++/11/debug/functions.h:376:49: error: invalid type argument of unary ‘*’ (have ‘int’)
  376 |           while (__first != __last && __value < *__first)
      |                                                 ^~~~~~~~
In file included from /usr/include/c++/11/string:52,
                 from /usr/include/c++/11/bits/locale_classes.h:40,
                 from /usr/include/c++/11/bits/ios_base.h:41,
                 from /usr/include/c++/11/ios:42,
                 from /usr/include/c++/11/istream:38,
                 from /usr/include/c++/11/sstream:38,
                 from /usr/include/c++/11/complex:45,
                 from /usr/include/c++/11/ccomplex:39,
                 from stdc++.h:54:
/usr/include/c++/11/bits/stl_algo.h: In instantiation of ‘constexpr bool std::binary_search(_FIter, _FIter, const _Tp&) [with _FIter = int; _Tp = main()::<lambda(double)>]’:
test.cpp:170:31:   required from here
/usr/include/c++/11/bits/stl_algo.h:2255:41: error: invalid type argument of unary ‘*’ (have ‘int’)
 2255 |       return __i != __last && !(__val < *__i);
      |                                         ^~~~
In file included from /usr/include/c++/11/bits/specfun.h:45,
                 from /usr/include/c++/11/cmath:1935,
                 from stdc++.h:41:
/usr/include/c++/11/bits/stl_algobase.h: In instantiation of ‘constexpr _ForwardIterator std::__lower_bound(_ForwardIterator, _ForwardIterator, const _Tp&, _Compare) [with _ForwardIterator = int; _Tp = main()::<lambda(double)>; _Compare = __gnu_cxx::__ops::_Iter_less_val]’:
/usr/include/c++/11/bits/stl_algo.h:2253:22:   required from ‘constexpr bool std::binary_search(_FIter, _FIter, const _Tp&) [with _FIter = int; _Tp = main()::<lambda(double)>]’
test.cpp:170:31:   required from here
/usr/include/c++/11/bits/stl_algobase.h:1455:9: error: no type named ‘difference_type’ in ‘struct std::iterator_traits<int>’
 1455 |         _DistanceType;
      |         ^~~~~~~~~~~~~
In file included from /usr/include/c++/11/bits/stl_algobase.h:71,
                 from /usr/include/c++/11/bits/specfun.h:45,
                 from /usr/include/c++/11/cmath:1935,
                 from stdc++.h:41:
/usr/include/c++/11/bits/predefined_ops.h: In instantiation of ‘constexpr bool __gnu_cxx::__ops::_Iter_less_val::operator()(_Iterator, _Value&) const [with _Iterator = int; _Value = const main()::<lambda(double)>]’:
/usr/include/c++/11/bits/stl_algobase.h:1464:14:   required from ‘constexpr _ForwardIterator std::__lower_bound(_ForwardIterator, _ForwardIterator, const _Tp&, _Compare) [with _ForwardIterator = int; _Tp = main()::<lambda(double)>; _Compare = __gnu_cxx::__ops::_Iter_less_val]’
/usr/include/c++/11/bits/stl_algo.h:2253:22:   required from ‘constexpr bool std::binary_search(_FIter, _FIter, const _Tp&) [with _FIter = int; _Tp = main()::<lambda(double)>]’
test.cpp:170:31:   required from here
/usr/include/c++/11/bits/predefined_ops.h:69:16: error: invalid type argument of unary ‘*’ (have ‘int’)
   69 |       { return *__it < __val; }
      |                ^~~~~
